--- a/local.css
+++ b/local.css
@@ -1,3 +1,13 @@
 .org-src-container {
   font-size: 1.8rem;
 }
+
+table th {
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
+}
+
+table td {
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
+}
